--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "any-promise": "^1.1.0",
     "jsonwebtoken": "^5.7.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "^2.4.5"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter spec"
   },
   "repository": {
     "type": "git",
