--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "jsonwebtoken": "^7.0.0"
   },
   "devDependencies": {
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "standard": "^7.1.2"
   },
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "standard && mocha --reporter spec"
   },
   "repository": {
     "type": "git",
