--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
-language: node_js
 node_js:
 - "4"
 - "5"
 - "6"
+language: node_js
+script: npm test
 env:
   - CXX=g++-4.8
 addons:
@@ -11,4 +12,3 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
-script: npm run test
